footer-logo-update

--- a/scss/pages/index/_hero.scss
+++ b/scss/pages/index/_hero.scss
@@ -173,6 +173,7 @@
     .hero {
         padding: 200px 0 0;
         &_container {
+            margin-top: 100px;
             padding-bottom: 128px;
         }
         &_building {
